<resources>
    <string name="app_name">Teacher Helper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_subject">+ ADD SUBJECT</string>
    <string name="new_subject">NEW SUBJECT</string>
    <string name="subject_name">SUBJECT NAME</string>
    <string name="delete_subject">- DELETE SUBJECT</string>
    <string name="add_group">+ ADD GROUP</string>
    <string name="new_group">NEW GROUP</string>
    <string name="group_name">GROUP NAME</string>
    <string name="delete_group">- DELETE GROUP</string>
    <string name="add_student">+ ADD STUDENT</string>
    <string name="new_student">NEW STUDENT</string>
    <string name="student_name">STUDENT NAME</string>
    <string name="student_surname">SURNAME</string>
    <string name="delete_student">- DELETE STUDENT</string>
    <string name="student_id">STUDENTS ALBUM NUMBER</string>
    <string name="add_grade">+ ADD GRADE</string>
    <string name="new_grade">NEW GRADE</string>
    <string name="grade_value">GRADE</string>
    <string name="why_grade">TASK NAME</string>
    <string name="button_delete_grade">- DELETE GRADE</string>
    <string name="subject">SUBJECT</string>
    <string name="task">TASK</string>
    <string name="student">STUDENT</string>
    <string name="back"> PREVIOUS </string>
    <string name="day">DAY OF THE WEEK</string>
    <string name="hour">HOURS</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="blank"> </string>
    <string name="clear0">CLEAR ALL</string>
    <string name="clear1">CLEAR STUDENTS</string>
    <string name="clear2">CLEAR GROUPS</string>
    <string name="clear3">CLEAR SUBJECTS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Spinners -->
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="hours">
        <item>8:00</item>
        <item>8:15</item>
        <item>8:30</item>
        <item>8:45</item>
        <item>9:00</item>
        <item>9:15</item>
        <item>9:30</item>
        <item>9:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
    </string-array>
    <string-array name="choosegrade">
        <item>0.0</item>
        <item>0.5</item>
        <item>1.0</item>
        <item>1.5</item>
        <item>2.0</item>
        <item>2.5</item>
        <item>3.0</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>5.0</item>
    </string-array>
</resources>