<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/main_dark_gray"
    tools:context=".add_subject_fragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rasa"
        android:text="@string/new_group"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rasa"
        android:text="@string/group_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/group_name_add"
        android:layout_width="355dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@color/main_light_gray"

        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/day_of_the_week"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/day_of_the_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rasa"
        android:text="@string/day"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/group_day_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_name_add" />

    <Spinner
        android:id="@+id/group_day_add"
        android:layout_width="355dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"

        android:layout_marginEnd="28dp"
        android:background="@color/main_light_gray"
        android:gravity="center"
        android:text="@string/day"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/hour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_of_the_week" />

    <TextView
        android:id="@+id/hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rasa"
        android:text="@string/hour"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_day_add" />

    <Button
        android:id="@+id/button_add_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="@font/rasa"
        android:text="@string/add_group"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="359dp"
        android:layout_height="104dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_add_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour">

        <Spinner
            android:id="@+id/start_hour_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_light_gray"
            android:gravity="center"
            android:text="@string/start"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/end_hour_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_light_gray"
            android:gravity="center"
            android:text="@string/stop"
            android:textAlignment="center" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logoth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>