<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_subject_fragment"
    android:background="@color/main_dark_gray"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rasa"
        android:text="@string/new_student"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/student_id_add"
        android:layout_width="355dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/main_light_gray"
        android:gravity="center"
        android:text="@string/student_id"
        android:textAlignment="center"

        app:layout_constraintBottom_toTopOf="@+id/student_name_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/student_name_add"
        android:layout_width="355dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/main_light_gray"
        android:gravity="center"
        android:text="@string/student_name"
        android:textAlignment="center"

        app:layout_constraintBottom_toTopOf="@+id/student_surname_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_id_add"
        tools:ignore="TextContrastCheck" />
    <EditText
        android:id="@+id/student_surname_add"
        android:layout_width="355dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/main_light_gray"
        android:gravity="center"
        android:text="@string/student_surname"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@+id/student_name_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/button_add_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:fontFamily="@font/rasa"
        android:text="@string/add_student"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_surname_add" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logoth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_student" />

</androidx.constraintlayout.widget.ConstraintLayout>