<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".subjects_fragment"
    android:background="@color/main_dark_gray"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/one_subject_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rasa"
        android:text="@string/subject_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_create_group"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:fontFamily="@font/rasa"
        android:text="@string/add_group"
        android:textColor="@color/white"
        android:textAlignment="viewStart"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_subject_name"
        app:layout_constraintBottom_toTopOf="@+id/groupsRecycleView"/>

    <Button
        android:id="@+id/button_delete_subject"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginStart="50dp"
        android:background="@null"
        android:fontFamily="@font/rasa"
        android:text="@string/delete_subject"
        android:textColor="@color/white"
        android:textAlignment="viewStart"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_back_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupsRecycleView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupsRecycleView"
        android:layout_width="304dp"
        android:layout_height="406dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/button_delete_subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_group" />

    <Button
        android:id="@+id/button_back_subject"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:fontFamily="@font/rasa"
        android:text="@string/back"

        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
